swagger documentation completed till now
